--- a/Desafios/desafios HTML/3lista.html
+++ b/Desafios/desafios HTML/3lista.html
@@ -14,21 +14,23 @@
 <body>
     <h1>Minha lista de compras</h1>
     <hr>
-    <label for="lista">
-        <input type="checkbox" name="lista" id="lista" value="leite" checked>
-        Leite
-    </label>
-    <label for="lista">
-        <input type="checkbox" name="lista" id="lista" value="ovos">
-        Ovos
-    </label>
-    <label for="lista">
-        <input type="checkbox" name="lista" id="lista" value="acucar">
-        Açucar
-    </label>
-    <label for="lista">
-        <input type="checkbox" name="lista" id="lista" value="farinha">
-        Farinha
-    </label>
+    <form action="">
+        <label for="lista">
+            <input type="checkbox" name="lista" id="lista" value="leite" checked>
+            Leite
+        </label>
+        <label for="lista">
+            <input type="checkbox" name="lista" id="lista" value="ovos">
+            Ovos
+        </label>
+        <label for="lista">
+            <input type="checkbox" name="lista" id="lista" value="acucar">
+            Açucar
+        </label>
+        <label for="lista">
+            <input type="checkbox" name="lista" id="lista" value="farinha">
+            Farinha
+        </label>
+    </form>
 </body>
 </html>
