att desafio quiz

--- a/Desafios/desafios HTML/4quiz.html
+++ b/Desafios/desafios HTML/4quiz.html
@@ -5,8 +5,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
+    <style>
+        li{
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <form action=""></form>
+    <h1>Quiz sobre HTML</h1>
+    <hr>
+    <form action="">
+        <ol>
+            <li>Pergunta 1</li>
+            <div>
+                <input type="radio" name="pergunta1" id="pergunta1a">
+                <label for="pergunta1">A) opção 1</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta1" id="pergunta1b">
+                <label for="pergunta1">B) opção 2</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta1" id="pergunta1c">
+                <label for="pergunta1">C) opção 3</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta1" id="pergunta1d">
+                <label for="pergunta1">D) opção 4</label>
+            </div>
+            <br>
+            <li>Pergunta 2</li>
+            <div>
+                <input type="radio" name="pergunta2" id="pergunta2a">
+                <label for="pergunta2">A) opção 1</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta2" id="pergunta2b">
+                <label for="pergunta2">B) opção 2</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta2" id="pergunta2c">
+                <label for="pergunta2">C) opção 3</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta2" id="pergunta2d">
+                <label for="pergunta2">D) opção 4</label>
+            </div>
+            <br>
+            <li>Pergunta 3</li>
+            <div>
+                <input type="radio" name="pergunta3" id="pergunta3a">
+                <label for="pergunta3">A) opção 1</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta3" id="pergunta3b">
+                <label for="pergunta3">B) opção 2</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta3" id="pergunta3c">
+                <label for="pergunta3">C) opção 3</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta3" id="pergunta3d">
+                <label for="pergunta3">D) opção 4</label>
+            </div>
+            <br>
+            <li>Pergunta 4</li>
+            <div>
+                <input type="radio" name="pergunta4" id="pergunta4a">
+                <label for="pergunta4">A) opção 1</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta4" id="pergunta4b">
+                <label for="pergunta4">B) opção 2</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta4" id="pergunta4c">
+                <label for="pergunta4">C) opção 3</label>
+            </div>
+            <div>
+                <input type="radio" name="pergunta4" id="pergunta4d">
+                <label for="pergunta4">D) opção 4</label>
+            </div>
+        </ol>
+        <input type="submit" value="Enviar">
+    </form>
 </body>
 </html>
