--- a/Desafios/desafios-HTML/3lista.html
+++ b/Desafios/desafios-HTML/3lista.html
@@ -32,5 +32,6 @@
             Farinha
         </label>
     </form>
+    <a href="https://efficient-sloth-d85.notion.site/3-Lista-de-compras-91ff11e5af754cb48b51ff56e272a89d" target="_blank">Link do desafio</a>
 </body>
 </html>
