--- a/Desafios/desafios-HTML/4quiz.html
+++ b/Desafios/desafios-HTML/4quiz.html
@@ -94,5 +94,6 @@
         </ol>
         <input type="submit" value="Enviar">
     </form>
+    <a href="https://efficient-sloth-d85.notion.site/4-Quiz-46ee27c74c00436db6368b3855ee7dbc" target="_blank">Link do desafio</a>
 </body>
 </html>
