--- a/Desafios/desafios-HTML/5blog.html
+++ b/Desafios/desafios-HTML/5blog.html
@@ -37,5 +37,6 @@
         <p><strong>por:</strong> Lorem ipsum</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quia quas, quae iusto, laborum ratione quisquam dicta modi nulla ad pariatur, esse sed sapiente rerum aliquid doloribus earum minima fugiat?</p>
     </aside>
+    <a href="https://efficient-sloth-d85.notion.site/5-Blog-Post-46d74c84a63c4e628739cc8a4fa7898f" target="_blank">Link do desafio</a>
 </body>
 </html>
