--- a/Desafios/desafio-receita/index.html
+++ b/Desafios/desafio-receita/index.html
@@ -4,42 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+    rel="stylesheet"
+    />
     <title>Waffle Clássico</title>
 </head>
 <body>
-    <header>
-        <h1>Waffle Clássico</h1>
-    </header>
-    <article>
-        <figure>
-            <img src="https://images.pexels.com/photos/1131810/pexels-photo-1131810.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagem de Waffle">
-            <figcaption>
-                Receita de waffle clássico
-            </figcaption>
-        </figure>
-        <h2>Ingredientes</h2>
-        <ul>
-            <li>2 xícaras (chá) de farinha de trigo</li>
-            <li>2 Colheres (sopá) de açucar</li>
-            <li>1/2 coleres (chá) de fermento em pó</li>
-            <li>2 colheres amido de milho</li>
-            <li>3 ovos batidos</li>
-            <li>4 colheres (sopa) de manteiga sem sal derretida</li>
-            <li>1 e 3/4 de xícara (chá) de leite</li>
-            <li>1 colher (sopa) de essência</li>
-        </ul>
-        <h2>Modo de preparo</h2>
-        <ol>
-            <li>Peneire em um recipiente a farinha de trigo, o açucar, o amido, o fermento e o sal. Reserve.</li>
-            <li>Em outro recipiente misture os ovos batidos com o leite, a manteiga derretida e a essência de baunilha.</li>
-            <li>Despeje sobre a mistura de farinha e rapidamente incorpore os ingredientes.</li>
-            <li>Aqueça o aparelho para Waffles. Coloque uma concha rasa de massa e espalhe até cobrir o molde do aparelho, feche a tampa e deixe assar até a massa ficar bem dourada</li>
-            <li>Retire com espátulas de silicone. Sirva com mel, frutas ou geleia.</li>
-        </ol>
-    </article>
+    <div id="container">
+        <header>
+            <h1>WAFFLE CLÁSSICO</h1>
+        </header>
+        <article>
+            <figure>
+                <img src="https://images.pexels.com/photos/1131810/pexels-photo-1131810.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagem de Waffle">
+                <figcaption>
+                    Receita de waffle clássico
+                </figcaption>
+            </figure>
+            <h2>Ingredientes</h2>
+            <ul>
+                <li>2 xícaras (chá) de farinha de trigo</li>
+                <li>2 Colheres (sopá) de açucar</li>
+                <li>1/2 coleres (chá) de fermento em pó</li>
+                <li>2 colheres amido de milho</li>
+                <li>3 ovos batidos</li>
+                <li>4 colheres (sopa) de manteiga sem sal derretida</li>
+                <li>1 e 3/4 de xícara (chá) de leite</li>
+                <li>1 colher (sopa) de essência</li>
+            </ul>
+            <h2>Modo de preparo</h2>
+            <ol>
+                <li>Peneire em um recipiente a farinha de trigo, o açucar, o amido, o fermento e o sal. Reserve.</li>
+                <li>Em outro recipiente misture os ovos batidos com o leite, a manteiga derretida e a essência de baunilha.</li>
+                <li>Despeje sobre a mistura de farinha e rapidamente incorpore os ingredientes.</li>
+                <li>Aqueça o aparelho para Waffles. Coloque uma concha rasa de massa e espalhe até cobrir o molde do aparelho, feche a tampa e deixe assar até a massa ficar bem dourada</li>
+                <li>Retire com espátulas de silicone. Sirva com mel, frutas ou geleia.</li>
+            </ol>
+            <h2>Informações adicionais</h2>
+            <p>Você poderá servir estes Waffles no café da manhã com leite condensado e frutas</p>
+        </article>
+    </div>
     <footer>
-        <h2>Informações adicionais</h2>
-        <p>Você poderá servir estes Waffles no café da manhã com leite condensado e frutas</p>
         <p>Desafio feito com &#x1F49C; pela <a href="https://app.rocketseat.com.br/discover/challenges/cookbook" target="_blank">Rocketseat</a></p>
     </footer>
 </body>
