--- a/Desafios/desafio-social/index.html
+++ b/Desafios/desafio-social/index.html
@@ -7,33 +7,36 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Social Tree</title>
 </head>
 <body>
-    <header>
-        <img src="https://images.pexels.com/photos/7026789/pexels-photo-7026789.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="foto do perfil">
-        <p>@instagram</p>
-    </header>
-    <article>
-        <div>
-            <p>LINK 1</p>
-        </div>
-        <div>
-            <p>LINK 2</p>
-        </div>
-        <div>
-            <p>LINK 3</p>
-        </div>
-        <div>
-            <p>LINK 4</p>
-        </div>
-    </article>
-    <footer>
-        <img src="./assets/twitter.svg" alt="twitter">
-        <img src="./assets/twitch.svg" alt="twitch">
-        <img src="./assets/instagram.svg" alt="instagram">
-        <img src="./assets/linkedin.svg" alt="linkedin">
-        <img src="./assets/github.svg" alt="github">
-    </footer>
+    <div id="container">
+        <header>
+            <div id="bordaperfil"><img src="https://images.pexels.com/photos/7026789/pexels-photo-7026789.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="foto do perfil" id="fotoperfil"></div>
+            <p id="instagram">@instagram</p>
+        </header>
+        <article>
+            <div  class="link">
+                <p>LINK 1</p>
+            </div>
+            <div class="link">
+                <p>LINK 2</p>
+            </div>
+            <div class="link">
+                <p>LINK 3</p>
+            </div>
+            <div class="link">
+                <p>LINK 4</p>
+            </div>
+        </article>
+        <footer>
+            <img src="./assets/twitter.svg" alt="twitter" class="icones">
+            <img src="./assets/twitch.svg" alt="twitch" class="icones">
+            <img src="./assets/instagram.svg" alt="instagram" class="icones">
+            <img src="./assets/linkedin.svg" alt="linkedin" class="icones">
+            <img src="./assets/github.svg" alt="github" class="icones">
+        </footer>
+    </div>
 </body>
 </html>
