att desafio-portfolio

--- a/Desafios/desafio-portfolio/index.html
+++ b/Desafios/desafio-portfolio/index.html
@@ -51,9 +51,11 @@
             </div>
             <div id="tecnologias">
                 <h2>Tecnologias</h2>
-                <p class="tecnologia">HTML</p>
-                <p class="tecnologia">CSS</p>
-                <p class="tecnologia">JAVASCRIPT</p>
+                <div id="containertec">
+                    <p class="tecnologia">HTML</p>
+                    <p class="tecnologia">CSS</p>
+                    <p class="tecnologia">JAVASCRIPT</p>
+                </div>
             </div>
             <div id="experiencias">
                 <h2>Experiências</h2>
