att desafio-portfolio

--- a/Desafios/desafio-portfolio/index.html
+++ b/Desafios/desafio-portfolio/index.html
@@ -58,19 +58,19 @@
                 </div>
             </div>
             <div id="experiencias">
-                <h2>Experiências</h2>
+                <h2 class="tit">Experiências</h2>
                 <ul>
-                    <li>
+                    <li class="exps">
                         Patmos<br>
                         2021 - 2022<br>
                         Desenhista técnico
                     </li>
-                    <li>
+                    <li class="exps">
                         Patmos<br>
                         2021 - 2022<br>
                         Desenhista técnico
                     </li>
-                    <li>
+                    <li class="exps">
                         Patmos<br>
                         2021 - 2022<br>
                         Desenhista técnico
@@ -78,14 +78,14 @@
                 </ul>
             </div>
             <div id="educacao">
-                <h2>Educação</h2>
+                <h2 class="tit">Educação</h2>
                 <ul>
-                    <li>
+                    <li class="exps">
                         UNIVESP<br>
                         2022 - Atualmente<br>
                         Engenharia de Computação
                     </li>
-                    <li>
+                    <li class="exps">
                         SENAI<br>
                         2018 - 2020<br>
                         Técnico em Mecatrônica
@@ -95,46 +95,62 @@
         </div>
         <div id="direita">
             <div id="projects">
-                <p>My projects</p>
+                <p id="my">My projects</p>
                 <p>Veja todos</p>
             </div>
             <div id="doisproj">
                 <div id="proj01">
-                    <div id="pasta">
+                    <div class="pasta">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>
-                        <p>"Curso em Vídeo" - Desafio</p>
+                        <p class="nomepasta">"Curso em Vídeo" - Desafio</p>
                     </div>
-                    <div id="descrição">
+                    <div class="descricao">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero excepturi saepe non esse, quasi sed. Voluptatibus impedit provident eum a quas voluptates tempora, totam suscipit maiores dolorem architecto explicabo non.
                         </p>
                     </div>
                     <div class="icones">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
-                        <p>100</p>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-git-branch"><line x1="6" y1="3" x2="6" y2="15"></line><circle cx="18" cy="6" r="3"></circle><circle cx="6" cy="18" r="3"></circle><path d="M18 9a9 9 0 0 1-9 9"></path></svg>
-                        <p>100</p>
-                        <div id="bolinha"></div>
-                        <p>JavaScript</p>
+                        <div class="iconesquerda">
+                            <div class="estrela">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+                                <p class="cem">100</p>
+                            </div>
+                            <div class="giticon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-git-branch"><line x1="6" y1="3" x2="6" y2="15"></line><circle cx="18" cy="6" r="3"></circle><circle cx="6" cy="18" r="3"></circle><path d="M18 9a9 9 0 0 1-9 9"></path></svg>
+                                <p class="cem">100</p>
+                            </div>
+                        </div>
+                        <div class="bolajs">
+                            <div class="bolinha"></div>
+                            <p class="js">JavaScript</p>
+                        </div>
                     </div>
                 </div>
                 <div id="proj02">
-                    <div id="pasta">
+                    <div class="pasta">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>
-                        <p>"Curso em Vídeo" - Desafio</p>
+                        <p class="nomepasta">"Curso em Vídeo" - Desafio</p>
                     </div>
-                    <div id="descrição">
+                    <div class="descricao">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero excepturi saepe non esse, quasi sed. Voluptatibus impedit provident eum a quas voluptates tempora, totam suscipit maiores dolorem architecto explicabo non.
                         </p>
                     </div>
                     <div class="icones">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
-                        <p>100</p>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-git-branch"><line x1="6" y1="3" x2="6" y2="15"></line><circle cx="18" cy="6" r="3"></circle><circle cx="6" cy="18" r="3"></circle><path d="M18 9a9 9 0 0 1-9 9"></path></svg>
-                        <p>100</p>
-                        <div id="bolinha"></div>
-                        <p>JavaScript</p>
+                        <div class="iconesquerda">
+                            <div class="estrela">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+                                <p class="cem">100</p>
+                            </div>
+                            <div class="giticon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-git-branch"><line x1="6" y1="3" x2="6" y2="15"></line><circle cx="18" cy="6" r="3"></circle><circle cx="6" cy="18" r="3"></circle><path d="M18 9a9 9 0 0 1-9 9"></path></svg>
+                                <p class="cem">100</p>
+                            </div>
+                        </div>
+                        <div class="bolajs">
+                            <div class="bolinha"></div>
+                            <p class="js">JavaScript</p>
+                        </div>
                     </div>
                 </div>
             </div>
