att desafio-portfolio

--- a/Desafios/desafio-portfolio/index.html
+++ b/Desafios/desafio-portfolio/index.html
@@ -158,15 +158,19 @@
                 <p>Recent Posts</p>
             </div>
             <div id="erro">
-                <div id="fotoperfil2"></div>
-                <h3>Erro adb devices no Genymotion e Android Studio (React Native)</h3>
-                <p class="subtext">2 anos atras</p>
-                <p>Erro adb devices no Genymotion e Android Studio (React Native)</p>
-                <div id="hashtags">
-                    <p class="subtext">#react-native</p>
-                    <p class="subtext">#genimotion</p>
-                    <p class="subtext">#genimotion</p>
-                    <p class="subtext">#genimotion</p>
+                <div id="espacofoto">
+                    <div id="fotoperfil2"></div>
+                </div>
+                <div id="espacoletra">
+                    <h3 id="texterro">Erro adb devices no Genymotion e Android Studio (React Native)</h3>
+                    <p class="subtext">2 anos atras</p>
+                    <p id="texterro2">Erro adb devices no Genymotion e Android Studio (React Native)</p>
+                    <div id="hashtags">
+                        <p class="subtext">#react-native</p>
+                        <p class="subtext">#genimotion</p>
+                        <p class="subtext">#genimotion</p>
+                        <p class="subtext">#genimotion</p>
+                    </div>
                 </div>
             </div>
         </div>
