--- a/Desafios/desafio-portfolio/index.html
+++ b/Desafios/desafio-portfolio/index.html
@@ -26,27 +26,27 @@
                 </div>
                 <div class="redes">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg>
-                    <p class="nomeredes">PUPPED</p>
+                    <p class="nomeredes"><a href="https://www.instagram.com/pupped.store/" target="_blank">PUPPED</a></p>
                 </div>
                 <div class="redes">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
-                    <p class="nomeredes">Possomato</p>
+                    <p class="nomeredes"><a href="https://github.com/Possomato" target="_blank">Possomato</a></p>
                 </div>
                 <div class="redes">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
-                    <p class="nomeredes">gabrielpossomato</p>
+                    <p class="nomeredes"><a href="https://www.linkedin.com/in/gabrielpossomato/" target="_blank">gabrielpossomato</a></p>
                 </div>
                 <div class="redes">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
-                    <p class="nomeredes">gabrielpossomato</p>
+                    <p class="nomeredes"><a href="https://twitter.com/gabrielpossomato" target="_blank">gabrielpossomato</a></p>
                 </div>
                 <div class="redes">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>
-                    <p class="nomeredes">https://gabrielpossomato.com.br</p>
+                    <p class="nomeredes"><a href="https://gabrielpossomato.com.br">https://gabrielpossomato.com.br</a></p>
                 </div>
                 <div class="redes">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-                    <p class="nomeredes">gabrielb.possomato@gmail.com</p>
+                    <p class="nomeredes"><a href="mailto:gabrielb.possomato@gmail.com">gabrielb.possomato@gmail.com</a></p>
                 </div>
             </div>
             <div id="tecnologias">
@@ -96,13 +96,13 @@
         <div id="direita">
             <div id="projects">
                 <p id="my">My projects</p>
-                <p>Veja todos</p>
+                <p><a href="https://github.com/Possomato?tab=repositories">Veja todos</a></p>
             </div>
             <div id="doisproj">
                 <div id="proj01">
                     <div class="pasta">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>
-                        <p class="nomepasta">"Curso em Vídeo" - Desafio</p>
+                        <p class="nomepasta">Projetos - "Curso em Vídeo"</p>
                     </div>
                     <div class="descricao">
                         <p>
@@ -120,16 +120,18 @@
                                 <p class="cem">100</p>
                             </div>
                         </div>
-                        <div class="bolajs">
-                            <div class="bolinha"></div>
-                            <p class="js">JavaScript</p>
+                        <div class="bola">
+                            <div class="bolinhahtml"></div>
+                            <p class="js">HTML</p>
+                            <div class="bolinhacss"></div>
+                            <p class="js">CSS</p>
                         </div>
                     </div>
                 </div>
                 <div id="proj02">
                     <div class="pasta">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>
-                        <p class="nomepasta">"Curso em Vídeo" - Desafio</p>
+                        <p class="nomepasta">Projetos - "Rocketseat"</p>
                     </div>
                     <div class="descricao">
                         <p>
@@ -147,12 +149,15 @@
                                 <p class="cem">100</p>
                             </div>
                         </div>
-                        <div class="bolajs">
-                            <div class="bolinha"></div>
-                            <p class="js">JavaScript</p>
+                        <div class="bola">
+                            <div class="bolinhahtml"></div>
+                            <p class="js">HTML</p>
+                            <div class="bolinhacss"></div>
+                            <p class="js">CSS</p>
                         </div>
-                    </div>
                 </div>
+            </div>
+            
             </div>
             <div id="recents">
                 <p>Recent Posts</p>
@@ -172,7 +177,6 @@
                         <p class="subtext">#genimotion</p>
                     </div>
                 </div>
-            </div>
         </div>
     </div>
 </body>
