--- a/Discover/ex009/index.html
+++ b/Discover/ex009/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>EX007</title>
+    <title>EX005</title>
 </head>
 <body>
-    <footer>
-        <p>15/03/2023</p>
-    </footer>
+    <header>
+        <div id="logo">LOGO</div>
+        <nav>
+            <a href="#">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">SERVICES</a>
+            <a href="#">TESTIMONIALS</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
 </body>
 </html>
