--- a/Discover/ex014/index.html
+++ b/Discover/ex014/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>EX006</title>
+    <title>EX007</title>
 </head>
 <body>
-    <div id="coluna01"></div>
-    <div id="coluna02"></div>
+    <footer>
+        <p>15/03/2023</p>
+    </footer>
 </body>
 </html>
